[package]
name = "ffidji"
version = "0.1.0"
edition = "2018"

[dependencies]
serde-xml-rs = "0.5.0"
serde = "1.0.130"
serde_derive = "1.0.130"
strip_bom = "1.0.0"
structopt = "0.2.15"
convert_case = "0.5.0"

[[bin]]
name = "ffidji"

[lib]
name = "ffidji"

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
rstest = "0.12.0"